# marain-client

./: .gitignore  Cargo.toml  README.md
src/: app.rs  chat_log.rs  default_keybinds.rs  event_bus.rs  main.rs  shared_secret.rs  socket_client.rs  tui_framework.rs  ui.rs  update.rs  user_config.rs
