[package]
name = "marain-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.34", features = ["unstable-locales"] }
color-eyre = "0.6.2"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
futures-util = { version = "0.3.30", features = ["sink"] }
log = "0.4.20"
ratatui = "0.26.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
tokio-util = "0.7.10"
url = "2.5.0"
marain-api = { git = "https://github.com/tjweldon/marain-api.git", rev = "refs/heads/main"}
serde_json = "1.0.113"
serde = { version = "1.0.197", features = ["derive"] }
homedir = "0.2.1"
bincode = "1.3.3"
log2 = "0.1.11"
